--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,4 @@ jobs:
     - name: Fetch Repository
       uses: actions/checkout@v3
     - name: Run Test
-      run: go test -race
+      run: go test ./... -v -race
