--- a/.github/workflows/dependabot_automerge.yml
+++ b/.github/workflows/dependabot_automerge.yml
@@ -1,7 +1,7 @@
 name: Dependabot auto-merge
 on:
     workflow_run:
-      workflows: [ Test, Tidy, Security, Linter ]
+      workflows: [ Test, Security, Linter ]
       types:
         - completed
 
@@ -24,7 +24,7 @@ jobs:
       - name: Enable auto-merge for Dependabot PRs
         if: ${{steps.metadata.outputs.update-type == 'version-update:semver-minor' || steps.metadata.outputs.update-type == 'version-update:semver-patch'}}
         run: |
-            # gh pr review --approve "$PR_URL"
+            gh pr review --approve "$PR_URL"
             gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
