--- a/.github/workflows/dependabot_automerge.yml
+++ b/.github/workflows/dependabot_automerge.yml
@@ -1,21 +1,29 @@
 name: Dependabot auto-merge
-on:
-    workflow_run:
-      workflows: [ Test, Security, Linter ]
-      types:
-        - completed
+on: pull_request
 
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
+  wait_for_checks:
+    runs-on: ubuntu-latest
+    steps:
+       - name: Wait for check is finished
+         uses: lewagon/wait-on-check-action@v1.0.0
+         id: wait_for_checks
+         with:
+             ref: ${{ github.event.pull_request.head.sha || github.sha }}
+             running-workflow-name: wait_for_checks
+             check-regexp: Tests
+             repo-token: ${{ secrets.PR_TOKEN }}
+             wait-interval: 10
   dependabot:
+    needs: [wait_for_checks]
     name: Dependabot auto-merge
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-      - uses: ahmadnassri/action-workflow-run-wait@v1
       - name: Dependabot metadata
         id: metadata
         uses: dependabot/fetch-metadata@v1.3.3
