--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
 name: Test
 jobs:
-  Build:
+  Test:
     strategy:
       matrix:
         go-version: [1.14.x, 1.16.x, 1.19.x]
