--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,9 @@ on:
     branches:
       - master
   pull_request:
-name: Test
+name: Tests
 jobs:
-  Test:
+  Tests:
     strategy:
       matrix:
         go-version: [1.14.x, 1.16.x, 1.19.x]
