--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,8 @@ jobs:
   Tests:
     strategy:
       matrix:
-        go-version: [1.16.x, 1.19.x]
-        platform: [ubuntu-latest, windows-latest]
+        go-version: [1.19.x, 1.20.x]
+        platform: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
     steps:
     - name: Install Go
