--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
   Tests:
     strategy:
       matrix:
-        go-version: [1.16.x, 1.19.x]
+        go-version: [1.25.x]
         platform: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
